deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgdemo-basic
  labels:
    app: pgdemo-basic
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: pgdemo-basic
  template:
    metadata:
      labels:
        app: pgdemo-basic
    spec:
      containers:
      - name: pgdemo-basic
        image: pgdemoacr.azurecr.io/pgdemo:0.3.2
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m       # 0.1 of a cpu
            memory: 128Mi   # minimum size for runningx
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /basic/actuator/health
            port: 8080
        volumeMounts:
        - mountPath: /shared/java-agent
          name: java-agent
          readOnly: true
      volumes:
      - name: java-agent
        emptyDir: {}
