deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgdemo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: pgdemo-basic
            port:
              number: 8080
        path: /basic
        pathType: Prefix
      - backend:
          service:
            name: bff
            port:
              number: 8090
        path: /bff
        pathType: Prefix
