deploy/template-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgdemo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: ingress-tls-csi
    hosts:
    - ${DEMO_DOMAIN_NAME}
  rules:
  - http:
      paths:
      - backend:
          service:
            name: pgdemo-basic-ingress
            port:
              number: 8080
        path: /basic
        pathType: Prefix
      - backend:
          service:
            name: bff-ingress
            port:
              number: 8090
        path: /bff
        pathType: Prefix
      - backend:
          service:
            name: spa-client
            port:
              number: 80
        path: /spa-client
        pathType: Prefix
